Improve tmux-status-line and color for neovim

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,8 +29,13 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind p pasteb
 
+# configures for neovim
+set-option -sg escape-time 10
+set-option -g focus-events on
 # set 256 color
-set -g default-terminal "xterm-256color"
+set-option -g default-terminal "screen-256color"
+set-option -ga terminal-features ',xterm-256color:RGB'
+set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 ## COLORSCHEME: gruvbox dark (medium)
 set-option -g status "on"
@@ -75,10 +80,28 @@ set-option -g status-right-style none
 set-option -g status-right-length "80"
 set-window-option -g window-status-separator ""
 
-set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
+set-option -g status-left "\
+#[bg=colour237,fg=colour241,nobold,noitalics,nounderscore] \
+#[bg=colour241,fg=colour248] #S \
+#[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
+set-option -g status-right "\
+#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]\
+#[bg=colour239,fg=colour246] %Y-%m-%d \
+#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics] \
+#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]\
+#[bg=colour239,fg=colour246] %H:%M \
+#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics] \
+#[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]\
+#[bg=colour248,fg=colour237] #h \
+#[bg=colour239,fg=colour248,nobold,noitalics,nounderscore] "
 
-set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
-set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
+set-window-option -g window-status-current-format "\
+#[bg=colour237,fg=colour214,nobold,noitalics,nounderscore] \
+#[bg=colour214,fg=colour239] #I |#[bg=colour214,fg=colour239,bold] #W \
+#[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
+set-window-option -g window-status-format "\
+#[bg=colour237,fg=colour239,noitalics] \
+#[bg=colour239,fg=colour223] #I |#[bg=colour239,fg=colour223] #W \
+#[bg=colour237,fg=colour239,noitalics]"
 
 # vim: set ft=tmux tw=0 nowrap:
