--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,64 +1,75 @@
-[shell]
-program = "/bin/zsh"
-args = [ "-l", "-c", "tmux attach || tmux" ]
-
 [env]
 TERM = "xterm-256color"
-
-[window]
-decorations = "None"
-opacity = 1.0
-startup_mode = "Windowed"
 
 [window.dimensions]
 columns = 120
 lines = 80
 
-[font]
-size = 14.0
-
-[font.bold]
-family = "SauceCodePro Nerd Font"
-style = "Bold"
-
-[font.bold_italic]
-family = "SauceCodePro Nerd Font"
-style = "Bold Italic"
-
-[font.italic]
-family = "SauceCodePro Nerd Font"
-style = "Italic"
+[window]
+decorations = "None"
+opacity = 0.95
+startup_mode = "Maximized"
+dynamic_title = false
 
 [font.normal]
-family = "SauceCodePro Nerd Font"
+family = "SauceCodePro Nerd Font Mono"
 style = "Regular"
 
+[font]
+size = 12.0
+builtin_box_drawing = false
+
+# Colors (Gruvbox dark)
+
+# Default colors
 [colors.primary]
-background = "0x282828"
-foreground = "0xebdbb2"
+# hard contrast background = = "#1d2021"
+# normal contrast background = = "#282828"
+# soft contrast background = = "#32302f"
+background = "#1d2021"
+foreground = "#ebdbb2"
 
+# Normal colors
 [colors.normal]
-black   = "0x282828"
-red     = "0xcc241d"
-green   = "0x98971a"
-yellow  = "0xd79921"
-blue    = "0x458588"
-magenta = "0xb16286"
-cyan    = "0x689d6a"
-white   = "0xa89984"
+black   = "#282828"
+red     = "#cc241d"
+green   = "#98971a"
+yellow  = "#d79921"
+blue    = "#458588"
+magenta = "#b16286"
+cyan    = "#689d6a"
+white   = "#a89984"
 
+# Bright colors
 [colors.bright]
-black   = "0x928374"
-red     = "0xfb4934"
-green   = "0xb8bb26"
-yellow  = "0xfabd2f"
-blue    = "0x83a598"
-magenta = "0xd3869b"
-cyan    = "0x8ec07c"
-white   = "0xebdbb2"
+black   = "#928374"
+red     = "#fb4934"
+green   = "#b8bb26"
+yellow  = "#fabd2f"
+blue    = "#83a598"
+magenta = "#d3869b"
+cyan    = "#8ec07c"
+white   = "#ebdbb2"
 
 [selection]
 save_to_clipboard = true
 
+[terminal.shell]
+# Linux
+program = "/bin/zsh"
+args = [ "-l", "-c", "tmux attach || tmux" ]
+# Window
+# program = "cmd.exe"
+# args = [ "-c", "ssh", "name@xx.xx.xx.xx" ]
+
 [mouse]
 hide_when_typing = true
+bindings = [
+    { mouse = "Right", action = "Paste" },
+]
+
+[keyboard]
+bindings = [
+    { key = "Enter", mods = "Alt", action = "ToggleFullscreen" },
+    { key = "\\", mods = "Alt", action = "ToggleViMode" },
+]
