--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # change prefix to C-x
-set -g prefix C-x
+set -g prefix C-w
 unbind C-b
 
 # rebind split key to = -
@@ -37,71 +37,16 @@ set-option -g default-terminal "screen-256color"
 set-option -ga terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
-## COLORSCHEME: gruvbox dark (medium)
-set-option -g status "on"
+# catppuccin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
 
-# default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
-# default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
-
-# default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
-
-# active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
-
-# pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
-
-# message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-# writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-# pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
-# clock
-set-window-option -g clock-mode-colour colour109 #blue
-
-# bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-justify "left"
-set-option -g status-left-style none
-set-option -g status-left-length "80"
-set-option -g status-right-style none
-set-option -g status-right-length "80"
-set-window-option -g window-status-separator ""
-
-set-option -g status-left "\
-#[bg=colour237,fg=colour241,nobold,noitalics,nounderscore] \
-#[bg=colour241,fg=colour248] #S \
-#[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-set-option -g status-right "\
-#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]\
-#[bg=colour239,fg=colour246] %Y-%m-%d \
-#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics] \
-#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]\
-#[bg=colour239,fg=colour246] %H:%M \
-#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics] \
-#[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]\
-#[bg=colour248,fg=colour237] #h \
-#[bg=colour239,fg=colour248,nobold,noitalics,nounderscore] "
-
-set-window-option -g window-status-current-format "\
-#[bg=colour237,fg=colour214,nobold,noitalics,nounderscore] \
-#[bg=colour214,fg=colour239] #I |#[bg=colour214,fg=colour239,bold] #W \
-#[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
-set-window-option -g window-status-format "\
-#[bg=colour237,fg=colour239,noitalics] \
-#[bg=colour239,fg=colour223] #I |#[bg=colour239,fg=colour223] #W \
-#[bg=colour237,fg=colour239,noitalics]"
-
-# vim: set ft=tmux tw=0 nowrap:
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left "#{E:@catppuccin_status_session}"
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
+set -ag status-right "#{E:@catppuccin_status_host}"
+set -ag status-right "#{E:@catppuccin_status_user}"
